# pysurvive

./: .gitignore  CHANGELOG.md  Makefile  README.md  class_toolchain.py  config.py  enemy.py  flake.nix  flashlight.py  main.py  make_spritesheet.py  make_tileset.py  navmesh.py  player.py  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  room.py  setup.cfg  utils.py  wall.py  world.py
maps/: level.map
pysurvive/: __init__.py  class_toolchain.py  config.py  enemy.py  flashlight.py  logger.py  main.py  navmesh.py  player.py  room.py  spritesheet.py  utils.py
pysurvive/game/: core.py  loop.py
pysurvive/map/: level.py  objects.py  tile.py  tileset.py
pysurvive/player/: __init__.py  bullet.py  feets.py  misc.py  player.py  viewpoint.py
src/: class_toolchain.py  config.py  enemy.py  flashlight.py  main.py  navmesh.py  player.py  room.py  spritesheet.py  utils.py
tests/: conftest.py  test_camera.py  test_level.py  test_logger.py  test_player.py  test_screen.py  test_tileset.py
tests/testdata/: invalid_layers_01.map  valid_layers_01.map  valid_layers_02.map
tiled/tilesets/: asphalt.tsx  floor_1.tsx  floor_2.tsx  floor_3.tsx  floor_4.tsx  floor_5.tsx  grass.tsx  ground_1.tsx  ground_2.tsx  sand.tsx  sand_objects_128.tsx  stone.tsx  water_1.tsx  water_2.tsx
tiled/tilesets/details/: asphalt_cracks_128.tsx  asphalt_cracks_256.tsx  asphalt_cracks_64.tsx  bush_128.tsx  bush_64.tsx  cactus_16.tsx  cactus_32.tsx  sand_objects_64.tsx  water_1_waves_128.tsx  water_1_waves_256.tsx  water_1_waves_64.tsx
