# These dependencies will only be installed
# if you ask for them, e.g. pip install -e ".[dev]".
[options.extras_require]
dev =
  flake8>=4,<5
  mypy>=0.950,<1
  tox>=3,<4

[flake8]
exclude = .git, .eggs, __pycache__, docs/, build/, dist/, venv/, .mypy_cache, .pytest_cache, instance/
max-line-length=88
